# functional_parser

./: .gitignore  CMakeLists.txt  DLL_CREATION_SUMMARY.md  DLL_DOCUMENTATION.md  FunctionalCoverageParsers.def  README.md  TestDll.cs  basic_test.c  build_and_test_dll.bat  build_and_test_dll.ps1  build_complete_dll.bat  build_core_dll.bat  build_dll.bat  build_dll.ps1  build_focused_stub.bat  build_functional_dll.bat  build_x64_dll.bat  build_x64_dll_manual.bat  focused_stub.cpp  focused_stub.def  push_after_repo_creation.bat  push_to_github.bat  run_functional_dll_tests.bat  run_simple_test.bat  run_simple_unit_tests.bat  run_unit_tests.bat  simple_dashboard_test.txt  simple_dll.cpp  simple_dll_test.cpp  simple_unit_tests.cpp  test_compile.cpp  test_dll.ps1  test_dll_loading.ps1  test_dll_powershell.ps1  test_functional_dll.cpp  test_simple_dll.bat  test_simple_dll.cpp  usage_example.c  working_unit_tests.cpp
cmake/: FunctionalCoverageParsersConfig.cmake.in
dotnet/FunctionalCoverageParsers.NET/: CoverageDatabase.cs  Exceptions.cs  FunctionalCoverageParsers.NET.csproj  HighPerformanceParser.cs  NativeMethods.cs  Parsers.cs
dotnet/FunctionalCoverageParsers.Tests/: BasicFunctionalityTests.cs  DirectDllTests.cs  ExportTests.cs  FunctionalCoverageParsers.Tests.csproj  HighPerformanceTests.cs  ParserTests.cs
dotnet/FunctionalCoverageParsers.Tests/TestData/: test_asserts.txt  test_groups.txt
include/: coverage_types.h  functional_coverage_parser.h  functional_coverage_parser_dll.h  high_performance_parser.h
src/: assert_parser.cpp  coverage_database.cpp  dashboard_parser.cpp  dll_api.cpp  export_utils.cpp  groups_parser.cpp  hierarchy_parser.cpp  high_performance_parser.cpp  modlist_parser.cpp  parser_utils.cpp
test/: manual_validation_test.txt  run_test_simulation.bat  run_unit_tests_demo.ps1  simple_test.cpp  test_execution_results.md  test_parsers.cpp  test_utilities.cpp  test_verification_summary.md  unit_tests.cpp  validate_test_coverage.ps1
validator/: Program.cs
